--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "markdown-to-jsx": "^7.7.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,7 +29,8 @@
     "react-router-dom": "^7.5.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.87.0"
+    "sass": "^1.87.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -39,7 +41,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "vite": "^6.3.1"
   }
 }
